--- a/Projeto-Aluno/backend/package.json
+++ b/Projeto-Aluno/backend/package.json
@@ -11,6 +11,7 @@
    "dependencies": {
       "@types/express": "^4.17.13",
       "body-parser": "^1.18.1",
+      "cors": "^2.8.5",
       "express": "^4.15.4",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
